# AgenticArmy

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
AwesomeN8n/awesome-n8n-templates/: AI product imagines.json  README.md
CrewAi/DevTeam/: README.md  pyproject.toml
CrewAi/DevTeam/knowledge/: user_preference.txt
CrewAi/DevTeam/src/development_team_automation/: crew.py  main.py
CrewAi/DevTeam/src/development_team_automation/config/: agents.yaml  tasks.yaml
CrewAi/crewai_local/: .env.example  .gitignore  CHANGELOG.md  EXECUTION_GUIDE.md  EXECUTIVE_SUMMARY_MODELS.md  FINAL_TEST_STATUS.md  FIXES_SUMMARY.md  GPTOSS_TECHNICAL_ANALYSIS.md  MCP_GUIDE.md  MODELS_COMPATIBILITY.md  MODELS_DOCS_QUICKSTART.md  README.md  RECOMMENDED_MODELS_RESEARCH.md  SESSION_COMPLETE.md  TEST_FIX_SUMMARY.md  TEST_ORGANIZATION_SUMMARY.md  TEST_RESULTS.md  TROUBLESHOOTING.md  avaliacao_www.imovelweb.com.br_propriedades_pousada-a-venda-.md  avaliacao_www.zapimoveis.com.br_imovel_venda-hotel-motel-pou_completo.md  completelogoutput.md  crew.py  estrategia_posicionamento.md  exemplos.py  limites_removidos.txt  logrun.txt  logrun_v2.txt  logtest.txt  logtest_cli.txt  main.py  plano_30_dias_resultado.md  pyproject.toml  pytest.ini  test_autonomous_workflow.md  test_cli_tools.py  test_event_loop_fix.py  test_event_loop_simple.py  test_http_403_resilience.md  test_mcp_complete_OLD.py  test_mcp_suite.py  (+5 more)
CrewAi/crewai_local/.claude/: settings.local.json
CrewAi/crewai_local/src/crewai_local/: api.py  api_config.py  background_jobs.py  crew.py  crew_paraty.py  exceptions.py  main.py  owner_profile.py
CrewAi/crewai_local/src/crewai_local/agents/: __init__.py  estrategia.py  juridico.py  marketing.py  mercado.py  prospeccao.py  qualidade.py  screening.py  tecnico.py
CrewAi/crewai_local/src/crewai_local/config/: __init__.py  env_validator.py  logging_config.py
CrewAi/crewai_local/src/crewai_local/crews/: __init__.py  workflow_abertura.py  workflow_avaliacao.py  workflow_planejamento_30dias.py  workflow_posicionamento.py  workflow_prospeccao.py  workflow_screening.py
CrewAi/crewai_local/src/crewai_local/models/: __init__.py  requests.py  responses.py
CrewAi/crewai_local/src/crewai_local/tasks/: __init__.py
CrewAi/crewai_local/src/crewai_local/tools/: __init__.py  mcp_tools_OLD.py  mcp_tools_new.py  web_tools.py
CrewAi/crewai_local/tests/: README.md  conftest.py  run_all_tests.py  test_airbnb.py  test_fetch.py  test_maps.py  test_search.py  test_wikipedia.py  test_youtube.py
CrewAi/crewai_local/tests/api/: __init__.py  conftest.py
Localn8n/self-hosted-ai-starter-kit/: README.md
Skynet/: .env.example  README.md  docker-compose.yml  test_comfyui_qwen.py  workflowideas.md
docs/: API.md
(+28 files in other folders)
