[project]
name = "crewai-local"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "crewai[tools] (>=0.203.0,<0.204.0)",
    "crewai[tools] (>=0.203.0,<0.204.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "crewai_local", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "crewai_local.main:run"
[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
