[project]
name = "crewai-local"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai[tools] (>=1.2.1,<3.0.0)",
    "crewai-tools[mcp] (>=1.2.1,<3.0.0)",
    "langchain-community (>=0.3.31,<0.5.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "mcp (>=1.20.0,<2.0.0)",
    "litellm (>=1.79.0,<2.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "fastapi (>=0.110.0,<1.0.0)",
    "uvicorn[standard] (>=0.27.0,<1.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "crewai_local", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "crewai_local.main:run"
api = "crewai_local.api:run_dev"
api-prod = "crewai_local.api:run_prod"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "pytest-timeout (>=2.3.0,<3.0.0)",
    "pytest-xdist (>=3.6.0,<4.0.0)",
    "pytest-asyncio (>=0.23.0,<1.0.0)"
]
